overflow fixes

--- a/lupo/sass/_media.sass
+++ b/lupo/sass/_media.sass
@@ -26,7 +26,9 @@
 			max-width: 520px
 			width: 86%
 			height: 280px
-			overflow: scroll
+			// overflow: hidden
+			iframe
+				// overflow: hidden
 
 
 	.info
