--- a/lupo/sass/main.sass
+++ b/lupo/sass/main.sass
@@ -144,16 +144,15 @@ body
 		background: url('../img/recuadro.png') 0 2px
 		background-size: 100% 100%
 		position: relative
-
 	&-1
 		width: 77%
 		iframe
+			position: relative
 			background: #000
 			padding: 20px
 			width: 91% !important
 			height: 91% !important
-			html
-				width: 100% !important
+			overflow: hidden
 
 	&-2
 		width: 23%
